Fixes table and image overflow on mobile

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -245,12 +245,22 @@ body > article x-body img {
 
 @media screen and (max-device-width: 560px) {
 	body > article x-body pre,
-	body > article x-body table,
-	body > article x-body img {
+	body > article x-body table {
 		padding-left: 10px;
 		margin-right: -10px;
 		margin-left: -10px;
 	}
+
+	body > article x-body img {
+		margin-right: -10px;
+		margin-left: -10px;
+		width: calc(100% + 20px);
+	}
+	body > article x-body table {
+		margin-right: -10px;
+		margin-left: -10px;
+		 width: calc(100% + 20px);
+	 }
 }
 
 
